Cambios Informes y Usuario Roles

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlsrv
-DB_HOST=localhost
+DB_HOST=192.168.1.22
 #DB_HOST=AUDITORPLUSBD
 DB_PORT=1433
 #DB_PORT=5011
