--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "aacotroneo/laravel-saml2": "^2.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "barryvdh/laravel-snappy": "^1.0",
         "dhtmlx/connector-php": "^3.0",
@@ -21,7 +22,8 @@
         "phpmailer/phpmailer": "^6.8",
         "realrashid/sweet-alert": "^7.1",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-permission": "^5.11"
+        "spatie/laravel-permission": "^5.11",
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
