--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "realrashid/sweet-alert": "^7.1",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^5.11",
+        "tecnickcom/tcpdf": "^6.8",
         "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
